proof of concept of panel usage

--- a/Streamus Chrome Extension.csproj
+++ b/Streamus Chrome Extension.csproj
@@ -43,6 +43,7 @@
     <Content Include="Gruntfile.js" />
     <Content Include="src\background.html" />
     <Content Include="src\css\mocha.css" />
+    <Content Include="src\css\panel.css" />
     <Content Include="src\foreground.html" />
     <Content Include="src\img\green_0bar_19.png" />
     <Content Include="src\img\green_0bar_38.png" />
@@ -71,7 +72,20 @@
     <Content Include="src\img\streamus_icon38.png" />
     <Content Include="src\img\streamus_icon48.png" />
     <Content Include="src\img\streamus_icon_white19.png" />
+    <Content Include="src\js\background\model\chromePanelManager.js" />
     <Content Include="src\js\background\viewModel\playlistsViewModel.js" />
+    <Content Include="src\js\common\enum\desktopNotificationDuration.js" />
+    <Content Include="src\js\panel\application.js" />
+    <Content Include="src\js\panel\main.js" />
+    <Content Include="src\js\panel\model\panelArea.js" />
+    <Content Include="src\js\panel\model\youTubePlayer.js" />
+    <Content Include="src\js\panel\model\youTubePlayerAPI.js" />
+    <Content Include="src\js\panel\plugins.js" />
+    <Content Include="src\js\panel\view\panelAreaView.js" />
+    <Content Include="src\js\panel\view\youTubePlayerRegion.js" />
+    <Content Include="src\js\panel\view\youTubePlayerView.js" />
+    <Content Include="src\panel.html" />
+    <Content Include="src\template\panelArea.html" />
     <Content Include="src\template\icon\closeIcon_24.svg" />
     <Content Include="src\template\icon\deleteIcon_18.svg" />
     <Content Include="src\template\icon\menuIcon_24.svg" />
@@ -148,14 +162,10 @@
     <Content Include="src\js\background\model\user.js" />
     <Content Include="src\js\background\model\song.js" />
     <Content Include="src\js\background\model\searchResult.js" />
-    <Content Include="src\js\background\model\youTubePlayer.js" />
-    <Content Include="src\js\background\model\youTubePlayerAPI.js" />
     <Content Include="src\js\background\model\chromeNotificationsManager.js" />
     <Content Include="src\js\background\plugins.js" />
     <Content Include="src\js\background\view\clipboardRegion.js" />
     <Content Include="src\js\background\view\clipboardView.js" />
-    <Content Include="src\js\background\view\youTubePlayerRegion.js" />
-    <Content Include="src\js\background\view\youTubePlayerView.js" />
     <Content Include="src\js\background\key\youTubeAPIKey.js" />
     <Content Include="src\js\common\enum\direction.js" />
     <Content Include="src\js\common\enum\exportFileType.js" />
